@@ -57,10 +57,16 @@ public class RobotsTxt {
 	 * @throws MalformedURLException
 	 */
 	protected static URL getRobotsUrl(URL url) throws MalformedURLException {
-		String sUrl = url.getProtocol() + "://" + url.getHost() + ":"
-				+ (url.getPort() == -1 ? url.getDefaultPort() : url.getPort())
-				+ "/robots.txt";
-		return new URL(sUrl);
+		StringBuffer sb = new StringBuffer();
+		sb.append(url.getProtocol());
+		sb.append("://");
+		sb.append(url.getHost());
+		if (url.getPort() != -1) {
+			sb.append(':');
+			sb.append(url.getPort());
+		}
+		sb.append("/robots.txt");
+		return new URL(sb.toString());
 	}
 
 	/**
@@ -127,6 +133,20 @@ public class RobotsTxt {
 		if (crawl == null)
 			return null;
 		return crawl.getUrlItem().getHost();
+	}
+
+	public boolean isCacheable() {
+		if (crawl == null)
+			return false;
+		switch (crawl.getUrlItem().getResponseCode()) {
+		case 200:
+			return true;
+		case 400:
+		case 404:
+			return true;
+		default:
+			return false;
+		}
 	}
 
 }
