@@ -1,5 +1,5 @@
 # File used by hudson to manage publication
-VERSION=1.2.4-rc3
+VERSION=1.2.4-rc4
 
 # STAGE options are "developer", "beta" or "stable"
 STAGE=stable
